--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,6 +4,11 @@
 keybind = global:cmd+\=toggle_quick_terminal
 # keybind = global:super+shift+]=toggle_quick_terminal
 
+quick-terminal-position = right
+quick-terminal-animation-duration = 0
+quick-terminal-screen = main
+
+
 cursor-style = block
 
 theme = rose-pine
