--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -23,8 +23,8 @@ cursor-style = block
 cursor-style-blink = false
 cursor-invert-fg-bg = true
 
-font-size = 16
-font-family = Maple Mono Regular
+font-size = 17
+font-family = Maple Mono NL NF CN Regular
 
 
 macos-titlebar-style = hidden
